<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_drugs">

    <fragment
        android:id="@+id/navigation_pharmacies"
        android:name="com.mypharmacyprojectt.mypharmacy.ui.pharmacies.PharmaciesFragment"
        android:label="@string/title_pharmacies"
        tools:layout="@layout/fragment_pharmacies" />

    <fragment
        android:id="@+id/navigation_drugs"
        android:name="com.mypharmacyprojectt.mypharmacy.ui.drugs.DrugsFragment"
        android:label="@string/title_drugs"
        tools:layout="@layout/fragment_drugs" />

    <fragment
        android:id="@+id/navigation_drugsrequests"
        android:name="com.mypharmacyprojectt.mypharmacy.ui.drugsrequests.DrugsRequestsFragment"
        android:label="@string/title_drugsrequests"
        tools:layout="@layout/fragment_drugsrequests" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_inventory"-->
<!--        android:name="com.mypharmacyprojectt.mypharmacy.ui.inventory.InventoryFragment"-->
<!--        android:label="@string/title_inventory"-->
<!--        tools:layout="@layout/fragment_inventory" />-->
</navigation>